--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -1,24 +1,20 @@
-service: import-service
+service: product-service
 frameworkVersion: '2'
-variablesResolutionMode: 20210219
-
+configValidationMode: error
+variablesResolutionMode: 20210326
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs16.x
   stage: ${opt:stage, 'dev'}
-  region: us-east-1
-
-  iamRoleStatements:
-    - Effect: "Allow"
-      Action: "s3:ListBucket"
-      Resource:
-        - "arn:aws:s3:::node-in-aws-cloud-catalogs"
-    - Effect: "Allow"
-      Action:
-        - "s3:*"
-      Resource:
-        - "arn:aws:s3:::node-in-aws-cloud-catalogs/*"
+  region: eu-west-1
+  environment:
+    ENV_STAGE: ${opt:stage, 'dev'}
+    PGHOST: ${self:custom.dotenvVars.PGHOST, env:PGHOST, ''}
+    PGUSER: ${self:custom.dotenvVars.PGUSER, env:PGUSER, ''}
+    PGDATABASE: ${self:custom.dotenvVars.PGDATABASE, env:PGDATABASE, ''}
+    PGPASSWORD: ${self:custom.dotenvVars.PGPASSWORD, env:PGPASSWORD, ''}
+    PGPORT: ${self:custom.dotenvVars.PGPORT, env:PGPORT, ''}
 
 plugins:
   - serverless-webpack
@@ -30,21 +26,32 @@ custom:
     dotenvVars: ${file(configs.js)}
 
 functions:
-  importProductsFile:
-    handler: handler.importProductsFile
+  getProductById:
+    handler: handler.getProductById
     events:
       - http:
-          path: import
+          path: products/{productId}
           method: get
           cors: true
           request:
             parameters:
-              querystrings:
-                name: true
+              paths:
+                productId: true
+  getAllProducts:
+    handler: handler.getAllProducts
+    events:
+      - http:
+          path: products
+          method: get
+          cors: true
 
-  importFileParser:
-    handler: handler.importFileParser
-      - s3:
-          bucket: uploaded
-          event: s3:ObjectCreated:*
-          existing: true
+  createProduct:
+    handler: handler.createProduct
+    events:
+      - http:
+          path: products
+          method: post
+          cors: true
+          #request:
+          #    schema:
+          #      application/json: ${file(src/schemas/createProductSchema.json)}
