deploy is working for the product service

--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,11 +4,11 @@
   "description": "Product Service created API Gateway and Lambdas",
   "main": "handler.js",
   "scripts": {
-    "package-build": "sls package",
-    "deploy:dev": "sls deploy --stage dev",
-    "deploy:prod": "sls deploy --stage prod",
-    "remove:dev-stack": "sls remove --stage dev --region us-east-1",
-    "remove:prod-stack": "sls remove --stage prod --region us-east-1"
+    "package-build": "SLS_DEBUG=* sls package --aws-profile=savelev --region=eu-west-1 --stage=dev",
+    "deploy:dev": "sls deploy --aws-profile=savelev --region=eu-west-1 --stage=dev",
+    "deploy:prod": "sls deploy --aws-profile=savelev --region=eu-west-1 --stage=prod",
+    "remove:dev-stack": "sls remove --aws-profile=savelev --stage dev --region eu-west-1",
+    "remove:prod-stack": "sls remove --aws-profile=savelev --stage prod --region eu-west-1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.73",
@@ -22,13 +22,14 @@
     "ts-loader": "^5.3.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.2.4",
-    "webpack": "^4.29.0",
+    "webpack": "^5.88.2",
     "webpack-node-externals": "^1.7.2"
   },
   "author": "JSCC",
   "license": "MIT",
   "dependencies": {
     "pg": "^8.6.0",
+    "serverless": "^2.35.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   }
