--- a/import-service/package.json
+++ b/import-service/package.json
@@ -28,6 +28,7 @@
   "author": "JSCC",
   "license": "MIT",
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "pg": "^8.6.0",
     "serverless": "^2.35.0",
     "uuid": "^8.3.2",
